--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "radium": "^0.18.1",
     "react": "^15.4.2",
+    "react-addons-shallow-compare": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
+    "react-virtualized": "^8.11.4",
     "redux": "^3.6.0",
     "redux-persist": "^4.1.0",
     "redux-thunk": "^2.2.0",
