--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-measure": "^1.4.5",
+    "react-onclickoutside": "^5.9.0",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
